testsuite/tests/parser/should_fail/position001.hs

module T where

-- We should get a parse error on column 33
-- Indented with spaces:
foo = 123456                    module

