testsuite/tests/parser/should_fail/position001.stderr

position001.hs:6:33: error: [GHC-58481]
    parse error on input ‘module’
